# slice-ice-gen

./: .gitignore  LICENSE  Readme.markdown  slice-ice-gen.cabal
src/: slice-ice-gen.hs
